--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Cv11"></activity>
+        <activity android:name=".cardd"></activity>
+        <activity android:name=".cardview" />
+        <activity android:name=".Cv11" />
         <activity android:name=".CV9" />
         <activity android:name=".Cv16" />
         <activity android:name=".Cv15" />
